[package]
name = "teestatus"
version = "0.2.0-alpha.2"
documentation = "https://docs.rs/teestatus"
readme = "README.md"
description = "Library to retrieve information from teeworlds servers and related mods."
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
repository = "https://github.com/edg-l/teestatus"
license = "MIT"
keywords = ["teeworlds", "ddracenetwork", "ddnet", "info"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.1"
log = "0.4.14"
rand = "0.8.3"
thiserror = "1.0.23"

[dev-dependencies]
env_logger = "0.8.2"
