[package]
name = "teestatus"
version = "0.2.1"
documentation = "https://docs.rs/teestatus"
readme = "README.md"
description = "Library to retrieve information from teeworlds servers and related mods."
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
repository = "https://github.com/edg-l/teestatus"
license = "MIT"
keywords = ["teeworlds", "ddracenetwork", "ddnet", "info"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
bytes = "1.0"
log = "0.4"
nom = "6.2"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
pretty_assertions = "0.7.2"
